tests/invalid/dict_update_wrong_arg_type/main.py
def run_case() -> None:
    d: dict[int, int] = {1: 10}
    d.update([(2, 20)])

if __name__ == "__main__":
    run_case()
